<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/color_background">

  <LinearLayout
    android:id="@+id/login_card"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:background="@color/color_surface"
    android:padding="@dimen/space_6"
    android:orientation="vertical"
    app:layout_constraintWidth_percent="0.9"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <FrameLayout
      android:layout_width="64dp"
      android:layout_height="64dp"
      android:layout_gravity="center"
      android:background="@drawable/bg_button_primary">
      <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="F"
        android:textSize="@dimen/text_2xl"
        android:textColor="@color/color_white"
        android:gravity="center"/>
    </FrameLayout>

    <TextView
      style="@style/FitApp.Text.H1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/login_title"
      android:layout_marginTop="@dimen/space_4"/>

    <TextView
      style="@style/FitApp.Text.Small"
      android:id="@+id/login_subtitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/login_subtitle_signin"/>

    <EditText
      android:id="@+id/input_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/label_name"
      android:visibility="gone"
      android:padding="@dimen/space_3"
      android:backgroundTint="@color/color_border"
      android:textColorHint="@color/color_text_light"
      android:textColor="@color/color_text"
      android:layout_marginTop="@dimen/space_4"/>

    <EditText
      android:id="@+id/input_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/label_email"
      android:inputType="textEmailAddress"
      android:padding="@dimen/space_3"
      android:backgroundTint="@color/color_border"
      android:textColorHint="@color/color_text_light"
      android:textColor="@color/color_text"
      android:layout_marginTop="@dimen/space_3"/>

    <EditText
      android:id="@+id/input_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/label_password"
      android:inputType="textPassword"
      android:padding="@dimen/space_3"
      android:backgroundTint="@color/color_border"
      android:textColorHint="@color/color_text_light"
      android:textColor="@color/color_text"
      android:layout_marginTop="@dimen/space_3"/>

    <Button
      android:id="@+id/btn_submit"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/FitApp.Button.Primary"
      android:text="@string/action_signin"
      android:onClick="onLoginSubmit"
      android:layout_marginTop="@dimen/space_6"/>

    <TextView
      android:id="@+id/toggle_mode"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/toggle_to_signup"
      android:textColor="@color/color_primary"
      android:onClick="onToggleLoginMode"
      android:layout_marginTop="@dimen/space_6"/>

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
